# ml_scaffolding

./: Makefile  README.md  pyproject.toml  readme.md
notebooks/: ml_project_template.ipynb
