[project]
name = "ml_scaffolding"
version = "0.1.0"
description = "Scaffolding for a Machine Learning project"
authors = [
    { name = "Alessandro Conflitti"}
]
license = "MIT License"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.5",
    "cloudpickle>=3.0.0",
    "ipywidgets>=8.1.3",
    "joblib>=1.4.2",
    "jupyterlab>=4.2.1",
    "lightgbm>=4.3.0",
    "matplotlib>=3.8.4",
    "missingno>=0.5.2",
    "numpy>=1.26.4",
    "nbconvert>=7.16.4",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "tqdm>=4.66.4",
    "xgboost>=2.0.3",
]

